overflow fix try

--- a/css/main.css
+++ b/css/main.css
@@ -11,8 +11,17 @@ html {
   }
 }
 
-html, body {
+/* html, body {
   height: 100%;
+} */
+
+html,body
+{
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  /* overflow-x: hidden;  */
 }
 
 body {
